deploy/k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crm
  labels:
    app: crm
spec:
  selector:
    app: crm
  ports:
    - name: http
      port: 80
      targetPort: http
